--- a/css/main.css
+++ b/css/main.css
@@ -175,9 +175,9 @@ html .section {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+    -webkit-box-pack: flex-start;
+    -ms-flex-pack: flex-start;
+    justify-content: flex-start;
     padding: 100px 170px
 }
 
@@ -230,6 +230,7 @@ html .section__title {
     -ms-flex-negative: 0;
     flex-shrink: 0;
     width: 200px;
+    margin-left: 100px;
     margin-right: 70px;
     color: #ac3232;
     text-transform: uppercase;
@@ -264,20 +265,21 @@ body .section__content,
 html .section__content {
     font-weight: 300;
     font-size: 1rem;
-    width: 100%;
-    max-width: 650px
+    width: 60%;
+    max-width: 900px
 }
 
 .night .section__content {
     font-weight: 300;
     font-size: 2rem;
-    width: 100%;
-    max-width: 650px
+    width: 60%;
+    max-width: 900px
 }
 
 @media screen and (max-width:768px) {
     body .section__content,
     html .section__content {
+		width: 100%;
         padding-top: 30px;
         padding-left: 50px
     }
@@ -526,10 +528,10 @@ html #top-button img {
 .intro__icon {    
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-crisp-edges;
-    image-rendering: pixelated;
     image-rendering: crisp-edges;
-    width:200px;
-    height:200px;
+    width:300px;
+    height:450px;
+	margin-left: 20px
 }
 
 .intro__contact {
@@ -626,7 +628,8 @@ html #top-button img {
     display: flex;
     margin-bottom: 100px;
     margin-left: -5%;
-    width: 125%
+    width: 125%;
+	min-height: 300px
 }
 
 @media screen and (max-width:1280px) {
@@ -654,6 +657,7 @@ html #top-button img {
 }
 
 .featured-projects .project__pic {
+	min-width: 200px;
     max-width: 700px;
     overflow: visible;
     margin: 0
@@ -661,6 +665,11 @@ html #top-button img {
 
 .featured-projects .project__pic a {
     display: block
+}
+
+.featured-projects .project__link{
+	width: 100%;
+	display: block;
 }
 
 .featured-projects .project__pic.phones a {
@@ -686,8 +695,16 @@ html #top-button img {
     vertical-align: bottom
 }
 
+.featured-projects .project__pic iframe {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    vertical-align: bottom;
+	min-height: 200px;
+}
+
 .featured-projects .project__caption {
-    width: 125px;
+    width: 400px;
     -ms-flex-negative: 0;
     flex-shrink: 0;
     margin-left: 30px
